<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Echoloc</string>


    <string name="title_activity_game">GameActivity</string>
    <!-- Words -->
    <string name="word_valid">Valid</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_settings">Settings</string>
    <string name="word_game_settings">Game Settings</string>
    <string name="word_play">Play</string>
    <string name="word_replay">Replay</string>
    <string name="word_go_home">Go home</string>
    <string name="word_wellPlay">Well Play</string>
    <string name="word_ohNoo">Oh… Nooo</string>

    <!-- Errors TODO translate -->
    <string name="error_city_range">Too large city range given…</string>
    <string name="error_connection">Connection failed…</string>
    <string name="error_inexistant_country">Inexistant country…</string>
    <string name="error_url">URL error…</string>
    <string name="error_data_read">Data reading error…</string>
    <string name="error_protocol">Request protocol error…</string>

    <!-- Game Settings -->
    <string name="langCode">EN</string>

    <string name="game_mode_map_finding">Map</string>
    <string name="game_mode_button_finding">Buttons</string>
    <string name="game_mode_text_finding">Name</string>

    <string name="game_settings_country">Country :</string>
    <string name="game_settings_country_all">ALL</string>
    <string name="game_settings_intoMostPop_part1">Into </string>
    <string name="game_settings_intoMostPop_part2"> most populate cities</string>
    <string name="game_settings_nb_buttons">Choises :</string>
    <string name="game_settings_zoom_minimum">Minimum zoom :</string>
    <string name="game_settings_zoom_description">1: World | 5: Continent | 10: City | 15: Street</string>


    <!-- Game -->
    <string name="game_final_city">The city was</string>
    <string name="game_final_distance">You got a precision of</string>
    <string name="game_final_duration">You took that time to find it</string>

    <string name="game_final_kilometer_unit">km</string>
    <string name="game_final_meter_unit">m</string>
    <string name="game_final_centimeter_unit">cm</string>

    <!-- Path for vector drawable -->
    <string name="path_double_vertical_arrow" translatable="false">M 45 80 L 75 80 L 60 100 ZM 45 40 L 75 40 L 60 20 ZM 55 40 L 55 80 L 65 80 L 65 40 Z</string>
    <string name="path_north_button" translatable="false">M 0 0 M 0 90 M 90 90 M 90 0 M 30 45 L 30 10 L 40 10 L 50 27.5 L 50 10 L 60 10 L 60 45 L 50 45 L 40 27.5 L 40 45 Z M 45 45 L 60 80 L 45 70 L 30 80 Z </string>
    <string name="path_point_background" translatable="false">M 350 0 A 350 350 0 0 0 109.8155 95.419 A 350 350 0 0 0 81.8844 574.9758 L 350 900 L 618.1152 574.9758 A 350 350 0 0 0 590.1847 95.419 A 350 350 0 0 0 350 0 Z</string>
    <string name="path_echo_logo_e" translatable="false" tools:ignore="TypographyDashes">M0 0M0 500M500 500M500 0M200.1454 5.2266C83.7545 28.9127.0976 131.2232 0 250V250H0V250C.0971 368.7767 83.7541 471.0877 200.1454 494.7739 136.0358 429.42 100.0846 341.5485 100 250 100.0849 158.4513 136.036 70.5803 200.1454 5.2266ZM350 21C332.2276 28.9413 315.432 38.8472 300 50.5979 348.7736 87.148 382.5496 140.2828 394.9237 200h-189.7352c-3.4049 16.4501-5.1431 33.2012-5.1885 50 .0452 16.7985 1.7832 33.55 5.188 50H494.8489c3.3924-16.4512 5.1182-33.2027 5.1511-50C499.9166 150.6705 441.0371 60.8127 350 21ZM379.121 350v0C361.7544 389.4062 334.5033 423.6581 300 449.4367 315.5337 461.2167 332.383 471.141 350 479.0075 407.7985 453.7189 453.7364 407.6547 478.8669 350Z</string>
    <string name="path_echo_logo_c" translatable="false">M0 0M0 500M500 500M500 0M200.1454 5.2266C83.7545 28.9127.0976 131.2232 0 250V250H0V250C.0971 368.7767 83.7541 471.0877 200.1454 494.7739 136.0358 429.42 100.0846 341.5485 100 250 100.0849 158.4513 136.036 70.5803 200.1454 5.2266ZM350 21C332.2276 28.9413 315.432 38.8472 300 50.5979 334.5033 76.3413 361.7544 110.5933 379.121 150h0c0 0 0 0 0 0 0 0 0 0 0 0H478.8669c0 0 0 0 0 0C453.7365 92.3448 407.7984 46.2805 350 20.992ZM379.121 350v0C361.7544 389.4062 334.5033 423.6581 300 449.4367 315.5337 461.2167 332.383 471.141 350 479.0075 407.7985 453.7189 453.7364 407.6547 478.8669 350Z</string>
    <string name="path_echo_logo_h" translatable="false">M0 0M0 500M500 500M500 0M200.1454 5.2266C162.832 12.82 128.9103 28.5267 100 50.2336V-300H0V250C0 330.6982 38.7313 403.7634 100 449.7663 100 350 100 350 100 250 100.0849 158.4513 136.036 70.5803 200.1454 5.2266ZM350 21C332.2276 28.9413 315.432 38.8472 300 50.5979 360.8144 95.8995 400 168.3481 400 250h0c0 0 0 0 0 0 0 0 0 0 0 0H500c0 0 0 0 0 0C499.9166 150.6708 441.0368 60.8126 350 21ZM400 250v199.6935C400 449.6935 400 449.6935 400 449.6935 400 449.6935 400 449.6935 400 449.6935 462.8654 402.5446 499.9038 328.5809 500 250Z</string>
    <string name="path_echo_logo_o" translatable="false">M0 0M0 500M500 500M500 0M200.1454 5.2266C83.7545 28.9127.0976 131.2232 0 250V250H0V250C.0971 368.7767 83.7541 471.0877 200.1454 494.7739 136.0358 429.42 100.0846 341.5485 100 250 100.0849 158.4513 136.036 70.5803 200.1454 5.2266ZM350 21C332.2276 28.9413 315.432 38.8472 300 50.5979 360.8144 95.8995 400 168.3481 400 250h0c0 0 0 0 0 0 0 0 0 0 0 0H500c0 0 0 0 0 0C499.9166 150.6708 441.0368 60.8126 350 21ZM400 250v0C399.8806 328.5003 362.8963 402.3863 300 449.4367 315.6183 461.2671 332.4279 471.1611 350 479.0075 441.1962 439.1984 499.9889 349.3107 500 250Z</string>

    <!-- Continents description -->
    <string name="word_asia">Asia</string>
    <string name="word_africa">Africa</string>
    <string name="word_north_america">North America</string>
    <string name="word_south_america">South America</string>
    <string name="word_europe">Europe</string>
    <string name="word_oceania">Oceania</string>
    <string name="oceania_countries_iso2" translatable="false">AU,CK,FJ,KI,MH,FM,NR,NZ,NU,PW,PG,WS,SB,TO,TV,VU</string>
    <string name="north_america_countries_iso2" translatable="false">CA,US,MX</string>
    <string name="south_america_countries_iso2" translatable="false">AG,AR,BS,BB,BZ,BO,BR,CL,CO,CR,CU,DM,DO,EC,SV,GD,GT,GY,HT,HN,JM,MX,NI,PA,PY,PE,KN,LC,VC,SR,TT,UY,VE</string>
    <string name="asia_countries_iso2" translatable="false">AF,AM,AZ,BH,BD,BT,BN,KH,CN,CY,GE,HK,IN,ID,IR,IQ,IL,JP,JO,KZ,KP,KR,KW,KG,LA,LB,MY,MV,MN,MM,NP,OM,PK,PH,QA,SA,SG,LK,SY,TW,TJ,TH,TL,TR,TM,AE,UZ,VN,YE</string>
    <string name="africa_countries_iso2" translatable="false">DZ,AO,BJ,BW,BF,BI,CV,CM,CF,TD,KM,CG,CD,CI,DJ,EG,GQ,ER,SZ,ET,GA,GM,GH,GN,GW,KE,LS,LR,LY,MG,MW,ML,MR,MU,MA,MZ,NA,NE,NG,RW,ST,SN,SC,SL,SO,ZA,SS,SD,TZ,TG,TN,UG,ZM,ZW</string>
    <string name="europe_countries_iso2" translatable="false">AL,AD,AT,BY,BE,BA,BG,HR,CZ,DK,EE,FI,FR,DE,GR,VA,HU,IS,IE,IT,LV,LI,LT,LU,MT,MD,MC,ME,NL,MK,NO,PL,PT,RO,RU,SM,RS,SK,SI,ES,SE,CH,UA,GB</string>
</resources>