<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSettingsActivity">
    <LinearLayout
        android:id="@+id/mainSettingsLayout"
        android:translationZ="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:background="@color/background_color"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp">
            <ImageView
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:id="@+id/toolbar_logo"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/point_logo_empty_square"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/toolbar_logo"
                android:layout_toStartOf="@id/toolbar_settings"
                android:textSize="35sp"
                android:textColor="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/toolbar_settings"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@drawable/stats_icon"
                android:onClick="showStats"
                android:contentDescription="@string/word_settings" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_color"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:background="@color/background_color">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/settingsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="11"
                        >
                        <com.example.echoloc.EchoButton
                            android:id="@+id/chooseMapButton"
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:colorBackgroundSelected="@color/main_color"
                            app:colorBackgroundUnselected="@color/background_color"
                            android:strokeColor="@color/main_color"
                            app:textColorSelected="@color/white"
                            app:textColorUnselected="@color/main_color"
                            android:textSize="8sp"
                            tools:ignore="SmallSp"
                            android:text="@string/game_mode_map_finding"
                            app:paddingInner="5dp"
                            android:selectable="true"
                            android:state_selected="true"
                            android:radius="5dp"
                            app:strokeWidth="1dp"/>
                        <View
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"/>
                        <com.example.echoloc.EchoButton
                            android:id="@+id/chooseButtonsButton"
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:colorBackgroundSelected="@color/main_color"
                            app:colorBackgroundUnselected="@color/background_color"
                            android:strokeColor="@color/main_color"
                            app:textColorSelected="@color/white"
                            app:textColorUnselected="@color/main_color"
                            android:textSize="8sp"
                            tools:ignore="SmallSp"
                            android:text="@string/game_mode_button_finding"
                            app:paddingInner="5dp"
                            android:selectable="true"
                            android:state_selected="false"
                            android:radius="5dp"
                            app:strokeWidth="1dp"/>
                        <View
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"/>
                        <com.example.echoloc.EchoButton
                            android:id="@+id/chooseTextButton"
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:colorBackgroundSelected="@color/main_color"
                            app:colorBackgroundUnselected="@color/background_color"
                            app:textColorSelected="@color/white"
                            app:textColorUnselected="@color/main_color"
                            android:textSize="8sp"
                            tools:ignore="SmallSp"
                            android:strokeColor="@color/main_color"
                            app:strokeWidth="1dp"
                            android:text="@string/game_mode_text_finding"
                            app:paddingInner="5dp"
                            android:selectable="true"
                            android:state_selected="false"
                            android:radius="5dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/main_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:layout_marginEnd="7dp"
                            android:text="@string/game_settings_country"/>
                        <EditText
                            android:id="@+id/etCountries"
                            android:backgroundTint="@color/main_color"
                            android:textColor="@color/main_color"
                            android:textColorHint="@color/second_color"
                            android:textSize="25sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/game_settings_country_all"
                            android:autofillHints=""
                            android:inputType="textNoSuggestions" />
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/textView2"
                            android:layout_alignParentStart="true"
                            android:textColor="@color/main_color"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="25sp"
                            android:layout_marginEnd="7dp"
                            android:layout_centerVertical="true"
                            android:text="@string/game_settings_intoMostPop_part1"/>
                        <EditText
                            android:id="@+id/intoMostPopulate"
                            android:layout_toEndOf="@id/textView2"
                            android:layout_toStartOf="@id/textView3"
                            android:backgroundTint="@color/main_color"
                            android:textColor="@color/main_color"
                            android:textColorHint="@color/second_color"
                            android:textSize="25sp"
                            android:inputType="number"
                            android:maxLines="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints="" />
                        <TextView
                            android:layout_alignParentEnd="true"
                            android:id="@+id/textView3"
                            android:textColor="@color/main_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:layout_marginStart="7dp"
                            android:layout_centerVertical="true"
                            android:text="@string/game_settings_intoMostPop_part2"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/main_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:layout_marginEnd="7dp"
                                android:text="@string/game_settings_zoom_minimum"/>
                            <EditText
                                android:id="@+id/minZoom"
                                android:backgroundTint="@color/main_color"
                                android:textColor="@color/main_color"
                                android:textColorHint="@color/second_color"
                                android:textSize="25sp"
                                android:inputType="number"
                                android:maxLines="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="" />
                        </LinearLayout>
                        <TextView
                            android:textColor="@color/main_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:layout_marginEnd="7dp"
                            android:text="@string/game_settings_zoom_description"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/countOfButtonsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/main_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:layout_marginEnd="7dp"
                            android:text="@string/game_settings_nb_buttons"/>
                        <EditText
                            android:id="@+id/countOfButtons"
                            android:backgroundTint="@color/main_color"
                            android:textColor="@color/main_color"
                            android:textColorHint="@color/second_color"
                            android:textSize="25sp"
                            android:inputType="number"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="" />
                    </LinearLayout>

                </LinearLayout>

                <com.example.echoloc.EchoButton
                    android:layout_marginTop="10dp"
                    android:id="@+id/button_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:colorBackground="@color/main_color"
                    android:radius="5dp"
                    android:selectable="false"
                    android:state_selected="true"
                    android:text="@string/word_play"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:translationZ="1dp"
                    app:colorBackgroundUnselected="@color/background_color"
                    app:paddingInner="10dp"
                    tools:ignore="SmallSp"
                    android:onClick="play"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:visibility="invisible"
        android:alpha="0"
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="100dp">
        <View
            android:id="@+id/loading_screen_background"
            android:alpha="0.85"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"/>
        <ImageView
            android:id="@+id/loading_screen_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/echo_logo_animated_morphing"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/loading_screen_message"
            android:textColor="@color/main_color"
            android:gravity="center"
            android:layout_above="@id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
        <com.example.echoloc.EchoButton
            android:layout_margin="5dp"
            android:id="@+id/button_cancel"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:colorBackground="@color/main_color"
            android:radius="5dp"
            android:selectable="false"
            android:state_selected="true"
            android:text="@string/word_cancel"
            android:textColor="@color/white"
            android:textSize="8sp"
            android:translationZ="1dp"
            app:colorBackgroundUnselected="@color/background_color"
            app:paddingInner="10dp"
            tools:ignore="SmallSp"
            android:onClick="cancel"/>
    </RelativeLayout>
</RelativeLayout>