<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:background="@color/background_color"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp">
        <ImageView
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/toolbar_logo"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/point_logo_empty_square"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/toolbar_logo"
            android:layout_toStartOf="@id/toolbar_settings"
            android:textSize="35sp"
            android:textColor="@color/main_color"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:gravity="center"/>
        <ImageButton
            android:id="@+id/toolbar_settings"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@drawable/stats_icon"
            android:onClick="showStats"
            android:contentDescription="@string/word_settings" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/main_color"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:background="@color/background_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.example.echoloc.EchoButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:colorBackground="@color/main_color"
                android:padding="5dp"
                android:radius="5dp"
                android:selectable="false"
                android:state_selected="true"
                android:text="@string/word_game_settings"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:translationZ="1dp"
                app:colorBackgroundUnselected="@color/black"
                app:paddingInner="10dp"
                tools:ignore="SmallSp"
                android:onClick="setSettings"/>
            <com.example.echoloc.EchoButton
                android:id="@+id/button_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:colorBackground="@color/main_color"
                android:padding="5dp"
                android:radius="5dp"
                android:selectable="false"
                android:state_selected="true"
                android:text="@string/word_play"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:translationZ="1dp"
                app:colorBackgroundUnselected="@color/black"
                app:paddingInner="10dp"
                tools:ignore="SmallSp"
                android:onClick="launchEcholocDefaultGame"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>